argo-apps-container/sampleservice02/vs1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-appset-service02
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway03
  http:
  - match:
    - uri:
        exact: /sample-appset-service02
    route:
    - destination:
        host: sample-appset-service02
        port:
          number: 80
